--- a/accounts/templates/accounts/send_message.html
+++ b/accounts/templates/accounts/send_message.html
@@ -1,18 +1,24 @@
 {% extends 'base.html' %}
 
-{% block content %}
-  <h2>Send Message {{ recipient.username }}</h2>
-  <form method="post">
-    {% csrf_token %}
-    <div class="form-group">
-      <label for="content">Message:</label>
-      <textarea class="form-control" id="content" name="content" rows="4" required></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Send</button>
-  </form>
-  {% if recipient %}
-    <a href="{% url 'accounts:chat_with' recipient_id=recipient.id %}">Back to Chat</a>
-{% endif %}
+{% block title %}Send Message to {{ recipient.username }}{% endblock %}
 
-  
+{% block content %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <h2 class="text-center">Send Message {{ recipient.username }}</h2>
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="content">Message:</label>
+                    <textarea class="form-control" id="content" name="content" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+            {% if recipient %}
+                <a href="{% url 'accounts:chat_with' recipient_id=recipient.id %}" class="btn btn-secondary mt-3">Back to Chat</a>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
