--- a/accounts/templates/accounts/users_list.html
+++ b/accounts/templates/accounts/users_list.html
@@ -1,20 +1,30 @@
 {% extends 'base.html' %}
 
+{% block title %}Users List{% endblock %}
+
 {% block content %}
-  <h2>Users List</h2>
-  <ul>
-    {% for user in users %}
-      <li>
-        <p></p>
-        <b>{{ user.username }} </b>
-        {% if not user == request.user %}
-        <a href="{% url 'accounts:send_friend_request' receiver_id=user.id %}">Send Friend Request</a>
-        <a href="{% url 'accounts:send_message' recipient_id=user.id %}">Send Message</a>
-
-          
-
-        {% endif %}
-      </li>
-    {% endfor %}
-  </ul>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <h2 class="text-center">Users List</h2>
+            <ul class="list-group mt-3">
+                {% for user in users %}
+                    <li class="list-group-item">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <span>
+                                <b>{{ user.username }}</b>
+                            </span>
+                            {% if not user == request.user %}
+                                <div class="btn-group">
+                                    <a href="{% url 'accounts:send_friend_request' receiver_id=user.id %}" class="btn btn-primary btn-sm">Send Friend Request</a>
+                                    <a href="{% url 'accounts:send_message' recipient_id=user.id %}" class="btn btn-info btn-sm">Send Message</a>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
