--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="{% url 'realtor:about' %}">About</a>
                 </li>
                 <li class="nav-item"> 
                     <a class="nav-link" href="{% url 'realtor:contact' %}">Contact</a>
