--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="{% url 'realtor:home' %}">
             <img src="{% static 'images/home.png' %}" alt="" width="17" height="17" class="mr-2">
-            The Vision Realtor
+            The Vision Realtors
         </a>
         
         <!-- ... (your navbar content) ... -->
